[package]
name = "admin-desktop-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = "1.0"
reqwest = "0.12.12"
gloo-utils = "0.2"
gloo-net = "0.2"
log = "0.4"
console_log = "0.2"
gloo-console = "0.2"
gloo-file = "0.3"
base64 = "0.21"

[workspace]
members = ["src-tauri"]
